--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,12 @@ cython_debug/
 #.idea/
 
 /media/images
+
+Backend/Apps/Account/migrations/
+Backend/Apps/Actor/migrations/
+Backend/Apps/Director/migrations/
+Backend/Apps/Movie/migrations/
+Backend/Apps/Review/migrations/
+Backend/Apps/User/migrations/
+Backend/Apps/Watchlist/migrations/
+
